--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>30 Friends Admin Panel</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,5 +39,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- <script src="https://kit.fontawesome.com/7d11c6dc57.js" crossorigin="anonymous"></script> -->
+    <script src="https://kit.fontawesome.com/c8878ce8b4.js" crossorigin="anonymous"></script>
   </body>
 </html>
