--- a/public/index.html
+++ b/public/index.html
@@ -41,5 +41,6 @@
     -->
     <!-- <script src="https://kit.fontawesome.com/7d11c6dc57.js" crossorigin="anonymous"></script> -->
     <script src="https://kit.fontawesome.com/c8878ce8b4.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.min.js"></script>
   </body>
 </html>
